Se ha modularizado un poco mas el codigo : Se ha movido execute_fg,show_history y cambiar_dir a commands.c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,8 @@ add_subdirectory(src)
 
 
 #librerias adicionales
-target_link_libraries (mush parser)
-target_link_libraries(mush readline)
+target_link_libraries (mush parser readline commands)
+
 
 
 
